Add parameter routes
* `GET /api/parameter/all` returns all parameters
* `GET /api/parameter/{name}` returns parameter named {name}
* `PATCH /api/parameter/{name}`, body: `{ "value": "new value" }`
  updates the specified parameter's value respecting it's type.
